<resources>
    <string name="app_name">RevisionesApp</string>
    <string name="title_home">Inicio</string>
    <string name="title_equipos">Equipos</string>
    <string name="title_incidencias">Incidencias</string>
    <string name="title_albaranes">Albaranes</string>
    <string name="title_espacios">Espacios</string>
    <string name="title_usuario">Usuario</string>
    <string name="title_notificaciones">Notificaciones</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_back">Atrás</string>
    <string name="title_editar">Editar</string>
    <string name="title_save">Guardar</string>
    <string name="ir_a_albaranes">Albaranes</string>
    <string name="ir_a_equipos">Equipos</string>
    <string name="ir_a_espacios">Espacios</string>
    <string name="ir_a_incidencias">Incidencias</string>
    <string name="Ubicacion">Ubicación</string>
    <string name="Dimensiones">Dimensiones</string>
    <string name="Peso">Peso</string>
    <string name="Marca">Marca</string>
    <string name="Modelo">Modelo</string>
    <string name="NumeroSerie">Número de serie</string>
    <string name="TipoProducto">Tipo de producto</string>
    <string name="Nombre">Nombre</string>
    <string name="Id">Id</string>

</resources>