<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/inicioFragment"
        android:icon="@drawable/ic_home"
        android:title="@string/title_home" />

    <item
        android:id="@+id/equiposFragment"
        android:icon="@drawable/ic_equipos"
        android:title="@string/title_equipos" />

    <item
        android:id="@+id/incidenciasFragment"
        android:icon="@drawable/ic_incidencias"
        android:title="@string/title_incidencias" />

    <item
        android:id="@+id/albaranesFragment"
        android:icon="@drawable/ic_albaranes"
        android:title="@string/title_albaranes" />

    <item
        android:id="@+id/espaciosFragment"
        android:icon="@drawable/ic_espacios"
        android:title="@string/title_espacios" />
</menu>