<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/inicioFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondoapp2"
    tools:context=".fragments.InicioFragment">

    <Button
        android:id="@+id/btnEquipos"
        android:fontFamily="sans-serif-condensed"
        android:background="@drawable/botones"
        android:textSize="20sp"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_equipos"
        android:drawablePadding="10dp"
        android:onClick="irAEquiposFragment"
        android:padding="10dp"
        android:text="@string/ir_a_equipos"
        app:layout_constraintBottom_toTopOf="@id/btnIncidencias"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnIncidencias"
        android:fontFamily="sans-serif-condensed"
        android:background="@drawable/botones"
        android:textSize="20sp"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_incidencias"
        android:drawablePadding="10dp"
        android:onClick="irAIncidenciasFragment"
        android:padding="10dp"
        android:text="@string/ir_a_incidencias"
        app:layout_constraintBottom_toTopOf="@id/btnAlbaranes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnEquipos" />

    <Button
        android:id="@+id/btnAlbaranes"
        android:fontFamily="sans-serif-condensed"
        android:background="@drawable/botones"
        android:textSize="20sp"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_albaranes"
        android:drawablePadding="10dp"
        android:onClick="irAAlbaranesFragment"
        android:padding="10dp"
        android:text="@string/ir_a_albaranes"
        app:layout_constraintBottom_toTopOf="@id/btnEspacios"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnIncidencias" />

    <Button
        android:id="@+id/btnEspacios"
        android:fontFamily="sans-serif-condensed"
        android:background="@drawable/botones"
        android:textSize="20sp"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_espacios"
        android:drawablePadding="10dp"
        android:onClick="irAEspaciosFragment"
        android:padding="10dp"
        android:layout_marginBottom="30dp"
        android:text="@string/ir_a_espacios"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnAlbaranes" />

</androidx.constraintlayout.widget.ConstraintLayout>